Usuarios-CRUD/yml/ctnamespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ctorres
  labels: 
    app: crud
