Usuarios-CRUD/yml/svc-crud.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-crud
  namespace: ctorres
  labels: 
    app: crud
spec: 
  type: NodePort
  ports:
  - port: 80
    nodePort: 30000
    protocol: TCP
  selector:
    app: crud
