Usuarios-CRUD/yml/ingress-crud.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-crud
  namespace: ctorres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.ctorres.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-crud
            port:
              number: 80
